--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Habit Tracker</title>
+    <title>Enhanced Habit Tracker</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <h1>My Habit Tracker</h1>
@@ -40,6 +41,12 @@
         <div id="monthly-summary">
             <h2>Monthly Summary</h2>
             <div id="monthly-summary-container"></div>
+        </div>
+
+        <!-- Chart Section -->
+        <div id="chart-section">
+            <h2>Habit Progress Overview</h2>
+            <canvas id="myChart"></canvas>
         </div>
     </div>
 
